Fix more contrast errors

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2 {
 /*-------- HEADER ---------*/
 
 header {
-  background-color: #b2d3a8;
+  background-color: #7E9975;
   display: flex;
   justify-content: space-between;
   align-items: center;
